--- a/TodoList/todo_list.html
+++ b/TodoList/todo_list.html
@@ -14,6 +14,7 @@
     </ol>
 
     <button id="clearCompletedBtn">Clear Completed</button>
+    <button id="clearBtn">Clear All Tasks</button>
     <script src="./todo_list.js"></script>
     </body>
     </html>
